# MinorThird

./: .gitignore  CodingHints.txt  LICENSE.txt  MinorTagger.java  MinorTaggerClient.pl  QUICKSTART.txt  STATUS.txt  bug-fixes.txt  build.properties  build.xml  index.html  pom.xml  super-build.xml  tasks.xml
apps/: MinorTagger.java
apps/align/: build.xml  init.bat
apps/email/: MinorTagger.java  MinorTaggerClient.pl  build.xml
apps/ksteppe/: README.txt  build.xml
apps/names/: STATUS.txt  build.xml  debugMixup.bsh  howToTrain.txt  init.bat  init.sh  labeler.bsh  view-labels.bsh
apps/slif/: build.xml  imageptr  init.bat  plans.txt
config/: annotators.config  data.properties  log4j.properties  sampleData.properties  selectableTypes.txt
demos/: LabelerDemo.java  MyFE.java  NumericDemo.java  NumericDemo_SGM.java  OnlineDemo.java  mixupDemo.bat
demos/SGMSample/: all.localmodel  ngb.lsf  relTemp.txt
demos/sampleData/: airtimeExample.txt  onlinedemo-input.txt  test.bsh  webmasterCommandTypes.labels  webmasterCommands.txt
demos/sampleMixup/: timev-1.mixup  timev1.mixup  toyName.mixup  webmaster.mixup
doc/: AllMinorthirdDocumentation.htm  AllMinorthirdDocumentation.html  ClassificationPackageHowTo.doc  CodingHints.txt  GettingStarted.html  HowToClassification.doc  HowToExtraction.doc  HowToUpload.txt  Intro Minorthird Tutorial.doc  KnownBugs.txt  Online Learning Example.doc  ProgrammerDuties.txt  QUICKSTART.txt  STATUS.txt  SampleData.html  SpanTypeTextBase Example.doc  Tutorials.html  VersionLog.txt  index.html  logo.ppt  logo.pptx  third-party-licensing.html
doc/UserGuide/: TableOfContents.html
doc/faq/: m3_faq.html  minorthird.html  mixuppackage.html  textpackage.html
doc/images/: 2col_leftNav.css  logo.ppt
doc/tutorials/: ApplyAnnotator Tutorial.htm  Classification Tutorial.htm  Classify Package Tutorial.htm  Command Line Other Option.htm  EditLabels Tutorial.htm  Extraction Tutorial.htm  How to Download and Run Minorthird.htm  Labeling and Loading Data Tutorial.htm  Mixup Tutorial.htm  Online Learning Tutorial.htm  TestClassifier Tutorial.htm  TestExtractor Tutorial.htm  TrainClassifier Tutorial.htm  TrainExtractor Tutorial.htm  TrainTestClassifier Tutorial.htm  TrainTestExtractor Tutorial.htm  View Labels Tutorial.htm
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
lib/: LBFGS.java  Mcsrch.java  third-party.html
lib/mixup/: allnames.txt  amt.mixup  date.mixup  email.mixup  (+11 more)
script/: checkapps.sh  merge-jars.pl  setup-tagger.bat  setup-tagger.sh  setup.apple  setup.bat  setup.cygwin  setup.linux  setup.sh  setup.unix
src/main/java/LBJ2/IR/: AST.java  ASTNode.java  ASTNodeIterator.java  Argument.java  ArrayCreationExpression.java  ArrayInitializer.java  ArrayType.java  AssertStatement.java  Assignment.java  AtLeastQuantifierExpression.java  AtMostQuantifierExpression.java  BinaryConstraintExpression.java  BinaryExpression.java  Block.java  BreakStatement.java  CastExpression.java  CatchClause.java  CatchList.java  ClassifierAssignment.java  ClassifierCastExpression.java  ClassifierExpression.java  ClassifierExpressionList.java  ClassifierName.java  ClassifierReturnType.java  ClassifierType.java  CodedClassifier.java  CompositeGenerator.java  Conditional.java  Conjunction.java  Constant.java  ConstantList.java  ConstraintDeclaration.java  ConstraintEqualityExpression.java  ConstraintExpression.java  ConstraintInvocation.java  ConstraintStatementExpression.java  ConstraintType.java  ContinueStatement.java  Declaration.java  DeclarationList.java  (+57 more)
src/main/java/LBJ2/frontend/: Makefile  Makefile.am  Makefile.in  ScannerError.java  SymbolNames.java  TokenValue.java  Yylex.java  genNameTable.pl  genNameTable.pl.in  getTerminals.pl  getTerminals.pl.in  package.html  parser.cup  parser.java  scanner.jlex  sym.java
src/main/java/LBJ2/jni/: GLPKHook.java  LBJ2_jni_GLPKHook.c  LBJ2_jni_GLPKHook.h  Makefile  Makefile.am  Makefile.in  checkSignatures.pl  checkSignatures.pl.in  package.html
src/main/java/LBJ2/learn/: Accuracy.java  AdaBoost.java  BatchTrainer.java  BiasedRandomWeightVector.java  BiasedWeightVector.java  BinaryMIRA.java  ChildLexicon.java  IdentityNormalizer.java  Learner.java  LearnerToText.java  Lexicon.java  LinearThresholdUnit.java  Log.java  Makefile  Makefile.am  Makefile.in  MultiLabelLearner.java  MuxLearner.java  NaiveBayes.java  Normalizer.java  PassiveAggressive.java  RandomWeightVector.java  Sigmoid.java  Softmax.java  SparseAveragedPerceptron.java  SparseConfidenceWeighted.java  SparseMIRA.java  SparseNetworkLearner.java  SparsePerceptron.java  SparseWeightVector.java  SparseWinnow.java  StochasticGradientDescent.java  SupportVectorMachine.java  TestingMetric.java  WekaWrapper.java  package.html
src/main/java/LBJ2/nlp/: Affixes.java  Capitalization.java  ColumnFormat.java  CommonFeatures.lbj  Forms.java  Makefile  Makefile.am  Makefile.in  NLDocument.java  POS.java  POSBracketToVector.java  POSBracketToWord.java  Sentence.java  SentenceSplitter.java  StringArraysToWords.java  Word.java  WordSplitter.java  WordTypeInformation.java  WordsInDocumentByDirectory.java  package.html
src/main/java/LBJ2/nlp/seg/: BIOTester.java  Makefile  Makefile.am  Makefile.in  POSBracketToToken.java  PlainToTokenParser.java  SegmentTagPlain.java  Token.java  WordsToTokens.java  package.html
src/main/java/LBJ2/parse/: ArrayFileParser.java  ArrayParser.java  ChildrenFromVectors.java  FeatureVectorParser.java  FoldParser.java  FoldSeparator.java  LineByLine.java  LinkedChild.java  LinkedVector.java  Makefile  Makefile.am  Makefile.in  Parser.java  package.html
src/main/java/LBJ2/util/: ByteString.java  ClassUtils.java  DVector.java  DVector2D.java  ExceptionlessInputStream.java  ExceptionlessOutputStream.java  FVector.java  IVector.java  IVector2D.java  Makefile  Makefile.am  Makefile.in  OVector.java  Sort.java  StudentT.java  TableFormat.java  package.html
(+2046 files in other folders)
